configs/sandbox-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    opendatahub.io/dashboard: 'true'
  name: sandbox
